Security mock test